--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@
   cursor: pointer;
 }
 
-.delivery {
+/* .delivery {
   
   max-width: 1900px;
   margin: 50px auto;
@@ -43,7 +43,7 @@
   margin: 50px auto;
   padding: 1rem 2rem;
   
-}
+} */
 
 
 body {
