--- a/styles/completedform.css
+++ b/styles/completedform.css
@@ -3,12 +3,23 @@
 
   
   /* form previews / list */
+  
+  
   .form-preview {
-    padding: 10px 16px;
-    margin: 20px 0;
-    border-bottom: 1px solid #aad6db;
-    animation: 1.25s flyin ease;
-  }
+    
+    max-width: 960px;
+    margin: 40px auto;
+    letter-spacing: 1px;
+    line-height: 1.6em; 
+  
+  /* box-shadow: 0 1px 3px 0 #000000;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px; */
+  text-align: center;
+  /* padding: 10px 16px;
+  margin: 2px 0; */
+  border-bottom: 1px solid #fafafa;
+}
   
   .form-preview:hover {
     box-shadow:  0 4px 8px 0  #000000;
