--- a/styles/create.css
+++ b/styles/create.css
@@ -9,6 +9,7 @@
 
 
 .multistep-form h1{
+  margin-top: 5rem;
     text-align: center;
     color: #003f47;
     
@@ -157,7 +158,7 @@
   .create {
     
       max-width: 960px;
-      margin: 40px auto;
+      margin: 60px auto;
       letter-spacing: 1px;
       line-height: 1.6em; 
     
