--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,11 +1,19 @@
 
   .home_contain {
     
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    color: #003f47;
-  }
+    max-width: 1000px;
+    margin: 90px auto;
+    letter-spacing: 1px;
+    line-height: 1.6em; 
+  
+  box-shadow: 0 1px 3px 0 #000000;
+  background-color: rgb(255, 255, 255);
+  border-radius: 30px;
+  text-align: center;
+  /* padding: 10px 16px;
+  margin: 2px 0; */
+  border-bottom: 1px solid #fafafa;
+}
   .home_header {
     font-weight: 600;
     font-size: 24px;
